@@ -1,8 +1,8 @@
 smp-utils (0.95-0.1) unstable; urgency=low
 
-  * bump version
+  * discover changes in spl-r04
 
- -- Douglas Gilbert <dgilbert@interlog.com>  Tue, 03 Feb 2009 15:00:00 -0500
+ -- Douglas Gilbert <dgilbert@interlog.com>  Tue, 27 Oct 2009 20:00:00 -0400
 
 smp-utils (0.94-0.1) unstable; urgency=low
 
